[build-system]
requires = ["hatchling >= 1.26", "opencv-python", "pygame", "numpy", "mediapipe", "collide_circle", "pgzero"]
build-backend = "hatchling.build"

[project]
name = "pgzhelper"
version = "0.0.2"
authors = [
  { name="Gautam Pulugurta", email="gootyboy@icloud.com" },
]
description = "Helper package for pgzero. Includes added support and documentation."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gootyboy/pgzhelper"
Issues = "https://github.com/gootyboy/pgzhelper/issues"